Bug 1732230: Ensure deallocation in NativeLayerCA::Representation::EnqueueSurface. r=mstange

Using CFTypeRefPtr ensures that the created Core Foundation / Media types are
deallocated under all code paths. The duplicated syntax of -"Deallocator"
variables is necessary because CFTypeRefPtr is designed to work with
functions that return the required type. All of the creation methods in use
here take a type reference as a parameter, making it impossible to pass in a
CFTypeRefPtr directly. The "Deallocator" variables serve the purpose of
ensuring deallocation even though the variables are not otherwise referenced.

This change also cleans up the casting for CFMutableDictionaryRef to use a
simpler Objective-C idiom.

Differential Revision: https://phabricator.services.mozilla.com/D126539